--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,24 @@
 
 # Go workspace file
 go.work
+
+# Created by https://www.toptal.com/developers/gitignore/api/hugo
+# Edit at https://www.toptal.com/developers/gitignore?templates=hugo
+
+### Hugo ###
+# Generated files by hugo
+/blog/public/
+/blog/resources/_gen/
+/blog/assets/jsconfig.json
+/blog/hugo_stats.json
+
+# Executable may be added to repository
+hugo.exe
+hugo.darwin
+hugo.linux
+
+# Temporary lock file while building
+/blog/.hugo_build.lock
+
+# End of https://www.toptal.com/developers/gitignore/api/hugo
+
